Use java.util.Base64.* classes instead of sun.misc.BASE64Encoder